lang/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program command
Rule 2     program -> command
Rule 3     program -> program function
Rule 4     program -> function
Rule 5     program -> error
Rule 6     command -> import STRING
Rule 7     command -> outcsv ID in STRING
Rule 8     command -> save ID in ID
Rule 9     command -> save LPAREN parlist RPAREN in ID
Rule 10    command -> print optend
Rule 11    command -> print parlist
Rule 12    command -> search ID with ID as sql
Rule 13    command -> foreach ID in ID
Rule 14    command -> foreach ID COMMA ID in ID
Rule 15    command -> end
Rule 16    command -> return
Rule 17    command -> return expression
Rule 18    command -> continue
Rule 19    command -> if relexpression then
Rule 20    command -> else
Rule 21    command -> def ID LPAREN RPAREN
Rule 22    command -> def ID LPAREN parlist RPAREN
Rule 23    command -> connect ID EQUALS DBPROVIDER LPAREN STRING RPAREN
Rule 24    command -> let ID EQUALS expression
Rule 25    command -> let ID EQUALS command
Rule 26    command -> let error
Rule 27    command -> list ID EQUALS LPAREN parlist RPAREN
Rule 28    sql -> SELECT
Rule 29    sql -> INSERT
Rule 30    sql -> UPDATE
Rule 31    expression -> variable
Rule 32    expression -> function
Rule 33    expression -> INTEGER
Rule 34    expression -> FLOAT
Rule 35    expression -> STRING
Rule 36    expression -> MINUS expression
Rule 37    expression -> LPAREN expression RPAREN
Rule 38    expression -> expression PLUS expression
Rule 39    expression -> expression MINUS expression
Rule 40    expression -> expression MULTIPLY expression
Rule 41    expression -> expression DIVIDE expression
Rule 42    expression -> expression POWER expression
Rule 43    relexpression -> expression LT expression
Rule 44    relexpression -> expression LE expression
Rule 45    relexpression -> expression GT expression
Rule 46    relexpression -> expression GE expression
Rule 47    relexpression -> expression EQUALS expression
Rule 48    relexpression -> expression NE expression
Rule 49    function -> ID LPAREN parlist RPAREN
Rule 50    variable -> ID
Rule 51    variable -> DBID
Rule 52    parlist -> parlist COMMA expression
Rule 53    parlist -> expression
Rule 54    optend -> COMMA
Rule 55    optend -> SEMI
Rule 56    optend -> <empty>

Terminals, with rules where they appear

COMMA                : 14 52 54
DBID                 : 51
DBPROVIDER           : 23
DIVIDE               : 41
EQUALS               : 23 24 25 27 47
FLOAT                : 34
GE                   : 46
GT                   : 45
ID                   : 7 8 8 9 12 12 13 13 14 14 14 21 22 23 24 25 27 49 50
INSERT               : 29
INTEGER              : 33
LE                   : 44
LPAREN               : 9 21 22 23 27 37 49
LT                   : 43
MINUS                : 36 39
MULTIPLY             : 40
NE                   : 48
PLUS                 : 38
POWER                : 42
RPAREN               : 9 21 22 23 27 37 49
SELECT               : 28
SEMI                 : 55
STRING               : 6 7 23 35
UPDATE               : 30
as                   : 12
connect              : 23
continue             : 18
def                  : 21 22
else                 : 20
end                  : 15
error                : 5 26
foreach              : 13 14
if                   : 19
import               : 6
in                   : 7 8 9 13 14
let                  : 24 25 26
list                 : 27
outcsv               : 7
print                : 10 11
return               : 16 17
save                 : 8 9
search               : 12
then                 : 19
with                 : 12

Nonterminals, with rules where they appear

command              : 1 2 25
expression           : 17 24 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 52 53
function             : 3 4 32
optend               : 10
parlist              : 9 11 22 27 49 52
program              : 1 3 0
relexpression        : 19
sql                  : 12
variable             : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program command
    (2) program -> . command
    (3) program -> . program function
    (4) program -> . function
    (5) program -> . error
    (6) command -> . import STRING
    (7) command -> . outcsv ID in STRING
    (8) command -> . save ID in ID
    (9) command -> . save LPAREN parlist RPAREN in ID
    (10) command -> . print optend
    (11) command -> . print parlist
    (12) command -> . search ID with ID as sql
    (13) command -> . foreach ID in ID
    (14) command -> . foreach ID COMMA ID in ID
    (15) command -> . end
    (16) command -> . return
    (17) command -> . return expression
    (18) command -> . continue
    (19) command -> . if relexpression then
    (20) command -> . else
    (21) command -> . def ID LPAREN RPAREN
    (22) command -> . def ID LPAREN parlist RPAREN
    (23) command -> . connect ID EQUALS DBPROVIDER LPAREN STRING RPAREN
    (24) command -> . let ID EQUALS expression
    (25) command -> . let ID EQUALS command
    (26) command -> . let error
    (27) command -> . list ID EQUALS LPAREN parlist RPAREN
    (49) function -> . ID LPAREN parlist RPAREN

    error           shift and go to state 19
    import          shift and go to state 7
    outcsv          shift and go to state 3
    save            shift and go to state 8
    print           shift and go to state 6
    search          shift and go to state 15
    foreach         shift and go to state 5
    end             shift and go to state 13
    return          shift and go to state 10
    continue        shift and go to state 17
    if              shift and go to state 2
    else            shift and go to state 11
    def             shift and go to state 20
    connect         shift and go to state 1
    let             shift and go to state 12
    list            shift and go to state 16
    ID              shift and go to state 14

    function                       shift and go to state 9
    program                        shift and go to state 4
    command                        shift and go to state 18

state 1

    (23) command -> connect . ID EQUALS DBPROVIDER LPAREN STRING RPAREN

    ID              shift and go to state 21


state 2

    (19) command -> if . relexpression then
    (43) relexpression -> . expression LT expression
    (44) relexpression -> . expression LE expression
    (45) relexpression -> . expression GT expression
    (46) relexpression -> . expression GE expression
    (47) relexpression -> . expression EQUALS expression
    (48) relexpression -> . expression NE expression
    (31) expression -> . variable
    (32) expression -> . function
    (33) expression -> . INTEGER
    (34) expression -> . FLOAT
    (35) expression -> . STRING
    (36) expression -> . MINUS expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MULTIPLY expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression POWER expression
    (50) variable -> . ID
    (51) variable -> . DBID
    (49) function -> . ID LPAREN parlist RPAREN

    INTEGER         shift and go to state 25
    FLOAT           shift and go to state 31
    STRING          shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 28
    ID              shift and go to state 30
    DBID            shift and go to state 24

    variable                       shift and go to state 29
    function                       shift and go to state 26
    expression                     shift and go to state 32
    relexpression                  shift and go to state 27

state 3

    (7) command -> outcsv . ID in STRING

    ID              shift and go to state 33


state 4

    (0) S' -> program .
    (1) program -> program . command
    (3) program -> program . function
    (6) command -> . import STRING
    (7) command -> . outcsv ID in STRING
    (8) command -> . save ID in ID
    (9) command -> . save LPAREN parlist RPAREN in ID
    (10) command -> . print optend
    (11) command -> . print parlist
    (12) command -> . search ID with ID as sql
    (13) command -> . foreach ID in ID
    (14) command -> . foreach ID COMMA ID in ID
    (15) command -> . end
    (16) command -> . return
    (17) command -> . return expression
    (18) command -> . continue
    (19) command -> . if relexpression then
    (20) command -> . else
    (21) command -> . def ID LPAREN RPAREN
    (22) command -> . def ID LPAREN parlist RPAREN
    (23) command -> . connect ID EQUALS DBPROVIDER LPAREN STRING RPAREN
    (24) command -> . let ID EQUALS expression
    (25) command -> . let ID EQUALS command
    (26) command -> . let error
    (27) command -> . list ID EQUALS LPAREN parlist RPAREN
    (49) function -> . ID LPAREN parlist RPAREN

    import          shift and go to state 7
    outcsv          shift and go to state 3
    save            shift and go to state 8
    print           shift and go to state 6
    search          shift and go to state 15
    foreach         shift and go to state 5
    end             shift and go to state 13
    return          shift and go to state 10
    continue        shift and go to state 17
    if              shift and go to state 2
    else            shift and go to state 11
    def             shift and go to state 20
    connect         shift and go to state 1
    let             shift and go to state 12
    list            shift and go to state 16
    ID              shift and go to state 14

    function                       shift and go to state 34
    command                        shift and go to state 35

state 5

    (13) command -> foreach . ID in ID
    (14) command -> foreach . ID COMMA ID in ID

    ID              shift and go to state 36


state 6

    (10) command -> print . optend
    (11) command -> print . parlist
    (54) optend -> . COMMA
    (55) optend -> . SEMI
    (56) optend -> .
    (52) parlist -> . parlist COMMA expression
    (53) parlist -> . expression
    (31) expression -> . variable
    (32) expression -> . function
    (33) expression -> . INTEGER
    (34) expression -> . FLOAT
    (35) expression -> . STRING
    (36) expression -> . MINUS expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MULTIPLY expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression POWER expression
    (50) variable -> . ID
    (51) variable -> . DBID
    (49) function -> . ID LPAREN parlist RPAREN

  ! shift/reduce conflict for ID resolved as shift
    COMMA           shift and go to state 40
    SEMI            shift and go to state 37
    import          reduce using rule 56 (optend -> .)
    outcsv          reduce using rule 56 (optend -> .)
    save            reduce using rule 56 (optend -> .)
    print           reduce using rule 56 (optend -> .)
    search          reduce using rule 56 (optend -> .)
    foreach         reduce using rule 56 (optend -> .)
    end             reduce using rule 56 (optend -> .)
    return          reduce using rule 56 (optend -> .)
    continue        reduce using rule 56 (optend -> .)
    if              reduce using rule 56 (optend -> .)
    else            reduce using rule 56 (optend -> .)
    def             reduce using rule 56 (optend -> .)
    connect         reduce using rule 56 (optend -> .)
    let             reduce using rule 56 (optend -> .)
    list            reduce using rule 56 (optend -> .)
    $end            reduce using rule 56 (optend -> .)
    INTEGER         shift and go to state 25
    FLOAT           shift and go to state 31
    STRING          shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 28
    ID              shift and go to state 30
    DBID            shift and go to state 24

  ! ID              [ reduce using rule 56 (optend -> .) ]

    variable                       shift and go to state 29
    expression                     shift and go to state 41
    function                       shift and go to state 26
    optend                         shift and go to state 38
    parlist                        shift and go to state 39

state 7

    (6) command -> import . STRING

    STRING          shift and go to state 42


state 8

    (8) command -> save . ID in ID
    (9) command -> save . LPAREN parlist RPAREN in ID

    ID              shift and go to state 44
    LPAREN          shift and go to state 43


state 9

    (4) program -> function .

    import          reduce using rule 4 (program -> function .)
    outcsv          reduce using rule 4 (program -> function .)
    save            reduce using rule 4 (program -> function .)
    print           reduce using rule 4 (program -> function .)
    search          reduce using rule 4 (program -> function .)
    foreach         reduce using rule 4 (program -> function .)
    end             reduce using rule 4 (program -> function .)
    return          reduce using rule 4 (program -> function .)
    continue        reduce using rule 4 (program -> function .)
    if              reduce using rule 4 (program -> function .)
    else            reduce using rule 4 (program -> function .)
    def             reduce using rule 4 (program -> function .)
    connect         reduce using rule 4 (program -> function .)
    let             reduce using rule 4 (program -> function .)
    list            reduce using rule 4 (program -> function .)
    ID              reduce using rule 4 (program -> function .)
    $end            reduce using rule 4 (program -> function .)


state 10

    (16) command -> return .
    (17) command -> return . expression
    (31) expression -> . variable
    (32) expression -> . function
    (33) expression -> . INTEGER
    (34) expression -> . FLOAT
    (35) expression -> . STRING
    (36) expression -> . MINUS expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MULTIPLY expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression POWER expression
    (50) variable -> . ID
    (51) variable -> . DBID
    (49) function -> . ID LPAREN parlist RPAREN

  ! shift/reduce conflict for ID resolved as shift
    import          reduce using rule 16 (command -> return .)
    outcsv          reduce using rule 16 (command -> return .)
    save            reduce using rule 16 (command -> return .)
    print           reduce using rule 16 (command -> return .)
    search          reduce using rule 16 (command -> return .)
    foreach         reduce using rule 16 (command -> return .)
    end             reduce using rule 16 (command -> return .)
    return          reduce using rule 16 (command -> return .)
    continue        reduce using rule 16 (command -> return .)
    if              reduce using rule 16 (command -> return .)
    else            reduce using rule 16 (command -> return .)
    def             reduce using rule 16 (command -> return .)
    connect         reduce using rule 16 (command -> return .)
    let             reduce using rule 16 (command -> return .)
    list            reduce using rule 16 (command -> return .)
    $end            reduce using rule 16 (command -> return .)
    INTEGER         shift and go to state 25
    FLOAT           shift and go to state 31
    STRING          shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 28
    ID              shift and go to state 30
    DBID            shift and go to state 24

  ! ID              [ reduce using rule 16 (command -> return .) ]

    variable                       shift and go to state 29
    function                       shift and go to state 26
    expression                     shift and go to state 45

state 11

    (20) command -> else .

    import          reduce using rule 20 (command -> else .)
    outcsv          reduce using rule 20 (command -> else .)
    save            reduce using rule 20 (command -> else .)
    print           reduce using rule 20 (command -> else .)
    search          reduce using rule 20 (command -> else .)
    foreach         reduce using rule 20 (command -> else .)
    end             reduce using rule 20 (command -> else .)
    return          reduce using rule 20 (command -> else .)
    continue        reduce using rule 20 (command -> else .)
    if              reduce using rule 20 (command -> else .)
    else            reduce using rule 20 (command -> else .)
    def             reduce using rule 20 (command -> else .)
    connect         reduce using rule 20 (command -> else .)
    let             reduce using rule 20 (command -> else .)
    list            reduce using rule 20 (command -> else .)
    ID              reduce using rule 20 (command -> else .)
    $end            reduce using rule 20 (command -> else .)


state 12

    (24) command -> let . ID EQUALS expression
    (25) command -> let . ID EQUALS command
    (26) command -> let . error

    ID              shift and go to state 47
    error           shift and go to state 46


state 13

    (15) command -> end .

    import          reduce using rule 15 (command -> end .)
    outcsv          reduce using rule 15 (command -> end .)
    save            reduce using rule 15 (command -> end .)
    print           reduce using rule 15 (command -> end .)
    search          reduce using rule 15 (command -> end .)
    foreach         reduce using rule 15 (command -> end .)
    end             reduce using rule 15 (command -> end .)
    return          reduce using rule 15 (command -> end .)
    continue        reduce using rule 15 (command -> end .)
    if              reduce using rule 15 (command -> end .)
    else            reduce using rule 15 (command -> end .)
    def             reduce using rule 15 (command -> end .)
    connect         reduce using rule 15 (command -> end .)
    let             reduce using rule 15 (command -> end .)
    list            reduce using rule 15 (command -> end .)
    ID              reduce using rule 15 (command -> end .)
    $end            reduce using rule 15 (command -> end .)


state 14

    (49) function -> ID . LPAREN parlist RPAREN

    LPAREN          shift and go to state 48


state 15

    (12) command -> search . ID with ID as sql

    ID              shift and go to state 49


state 16

    (27) command -> list . ID EQUALS LPAREN parlist RPAREN

    ID              shift and go to state 50


state 17

    (18) command -> continue .

    import          reduce using rule 18 (command -> continue .)
    outcsv          reduce using rule 18 (command -> continue .)
    save            reduce using rule 18 (command -> continue .)
    print           reduce using rule 18 (command -> continue .)
    search          reduce using rule 18 (command -> continue .)
    foreach         reduce using rule 18 (command -> continue .)
    end             reduce using rule 18 (command -> continue .)
    return          reduce using rule 18 (command -> continue .)
    continue        reduce using rule 18 (command -> continue .)
    if              reduce using rule 18 (command -> continue .)
    else            reduce using rule 18 (command -> continue .)
    def             reduce using rule 18 (command -> continue .)
    connect         reduce using rule 18 (command -> continue .)
    let             reduce using rule 18 (command -> continue .)
    list            reduce using rule 18 (command -> continue .)
    ID              reduce using rule 18 (command -> continue .)
    $end            reduce using rule 18 (command -> continue .)


state 18

    (2) program -> command .

    import          reduce using rule 2 (program -> command .)
    outcsv          reduce using rule 2 (program -> command .)
    save            reduce using rule 2 (program -> command .)
    print           reduce using rule 2 (program -> command .)
    search          reduce using rule 2 (program -> command .)
    foreach         reduce using rule 2 (program -> command .)
    end             reduce using rule 2 (program -> command .)
    return          reduce using rule 2 (program -> command .)
    continue        reduce using rule 2 (program -> command .)
    if              reduce using rule 2 (program -> command .)
    else            reduce using rule 2 (program -> command .)
    def             reduce using rule 2 (program -> command .)
    connect         reduce using rule 2 (program -> command .)
    let             reduce using rule 2 (program -> command .)
    list            reduce using rule 2 (program -> command .)
    ID              reduce using rule 2 (program -> command .)
    $end            reduce using rule 2 (program -> command .)


state 19

    (5) program -> error .

    import          reduce using rule 5 (program -> error .)
    outcsv          reduce using rule 5 (program -> error .)
    save            reduce using rule 5 (program -> error .)
    print           reduce using rule 5 (program -> error .)
    search          reduce using rule 5 (program -> error .)
    foreach         reduce using rule 5 (program -> error .)
    end             reduce using rule 5 (program -> error .)
    return          reduce using rule 5 (program -> error .)
    continue        reduce using rule 5 (program -> error .)
    if              reduce using rule 5 (program -> error .)
    else            reduce using rule 5 (program -> error .)
    def             reduce using rule 5 (program -> error .)
    connect         reduce using rule 5 (program -> error .)
    let             reduce using rule 5 (program -> error .)
    list            reduce using rule 5 (program -> error .)
    ID              reduce using rule 5 (program -> error .)
    $end            reduce using rule 5 (program -> error .)


state 20

    (21) command -> def . ID LPAREN RPAREN
    (22) command -> def . ID LPAREN parlist RPAREN

    ID              shift and go to state 51


state 21

    (23) command -> connect ID . EQUALS DBPROVIDER LPAREN STRING RPAREN

    EQUALS          shift and go to state 52


state 22

    (36) expression -> MINUS . expression
    (31) expression -> . variable
    (32) expression -> . function
    (33) expression -> . INTEGER
    (34) expression -> . FLOAT
    (35) expression -> . STRING
    (36) expression -> . MINUS expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MULTIPLY expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression POWER expression
    (50) variable -> . ID
    (51) variable -> . DBID
    (49) function -> . ID LPAREN parlist RPAREN

    INTEGER         shift and go to state 25
    FLOAT           shift and go to state 31
    STRING          shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 28
    ID              shift and go to state 30
    DBID            shift and go to state 24

    variable                       shift and go to state 29
    function                       shift and go to state 26
    expression                     shift and go to state 53

state 23

    (35) expression -> STRING .

    PLUS            reduce using rule 35 (expression -> STRING .)
    MINUS           reduce using rule 35 (expression -> STRING .)
    MULTIPLY        reduce using rule 35 (expression -> STRING .)
    DIVIDE          reduce using rule 35 (expression -> STRING .)
    POWER           reduce using rule 35 (expression -> STRING .)
    then            reduce using rule 35 (expression -> STRING .)
    RPAREN          reduce using rule 35 (expression -> STRING .)
    COMMA           reduce using rule 35 (expression -> STRING .)
    LT              reduce using rule 35 (expression -> STRING .)
    LE              reduce using rule 35 (expression -> STRING .)
    GT              reduce using rule 35 (expression -> STRING .)
    GE              reduce using rule 35 (expression -> STRING .)
    EQUALS          reduce using rule 35 (expression -> STRING .)
    NE              reduce using rule 35 (expression -> STRING .)
    import          reduce using rule 35 (expression -> STRING .)
    outcsv          reduce using rule 35 (expression -> STRING .)
    save            reduce using rule 35 (expression -> STRING .)
    print           reduce using rule 35 (expression -> STRING .)
    search          reduce using rule 35 (expression -> STRING .)
    foreach         reduce using rule 35 (expression -> STRING .)
    end             reduce using rule 35 (expression -> STRING .)
    return          reduce using rule 35 (expression -> STRING .)
    continue        reduce using rule 35 (expression -> STRING .)
    if              reduce using rule 35 (expression -> STRING .)
    else            reduce using rule 35 (expression -> STRING .)
    def             reduce using rule 35 (expression -> STRING .)
    connect         reduce using rule 35 (expression -> STRING .)
    let             reduce using rule 35 (expression -> STRING .)
    list            reduce using rule 35 (expression -> STRING .)
    ID              reduce using rule 35 (expression -> STRING .)
    $end            reduce using rule 35 (expression -> STRING .)


state 24

    (51) variable -> DBID .

    PLUS            reduce using rule 51 (variable -> DBID .)
    MINUS           reduce using rule 51 (variable -> DBID .)
    MULTIPLY        reduce using rule 51 (variable -> DBID .)
    DIVIDE          reduce using rule 51 (variable -> DBID .)
    POWER           reduce using rule 51 (variable -> DBID .)
    LT              reduce using rule 51 (variable -> DBID .)
    LE              reduce using rule 51 (variable -> DBID .)
    GT              reduce using rule 51 (variable -> DBID .)
    GE              reduce using rule 51 (variable -> DBID .)
    EQUALS          reduce using rule 51 (variable -> DBID .)
    NE              reduce using rule 51 (variable -> DBID .)
    COMMA           reduce using rule 51 (variable -> DBID .)
    import          reduce using rule 51 (variable -> DBID .)
    outcsv          reduce using rule 51 (variable -> DBID .)
    save            reduce using rule 51 (variable -> DBID .)
    print           reduce using rule 51 (variable -> DBID .)
    search          reduce using rule 51 (variable -> DBID .)
    foreach         reduce using rule 51 (variable -> DBID .)
    end             reduce using rule 51 (variable -> DBID .)
    return          reduce using rule 51 (variable -> DBID .)
    continue        reduce using rule 51 (variable -> DBID .)
    if              reduce using rule 51 (variable -> DBID .)
    else            reduce using rule 51 (variable -> DBID .)
    def             reduce using rule 51 (variable -> DBID .)
    connect         reduce using rule 51 (variable -> DBID .)
    let             reduce using rule 51 (variable -> DBID .)
    list            reduce using rule 51 (variable -> DBID .)
    ID              reduce using rule 51 (variable -> DBID .)
    $end            reduce using rule 51 (variable -> DBID .)
    RPAREN          reduce using rule 51 (variable -> DBID .)
    then            reduce using rule 51 (variable -> DBID .)


state 25

    (33) expression -> INTEGER .

    PLUS            reduce using rule 33 (expression -> INTEGER .)
    MINUS           reduce using rule 33 (expression -> INTEGER .)
    MULTIPLY        reduce using rule 33 (expression -> INTEGER .)
    DIVIDE          reduce using rule 33 (expression -> INTEGER .)
    POWER           reduce using rule 33 (expression -> INTEGER .)
    then            reduce using rule 33 (expression -> INTEGER .)
    RPAREN          reduce using rule 33 (expression -> INTEGER .)
    COMMA           reduce using rule 33 (expression -> INTEGER .)
    LT              reduce using rule 33 (expression -> INTEGER .)
    LE              reduce using rule 33 (expression -> INTEGER .)
    GT              reduce using rule 33 (expression -> INTEGER .)
    GE              reduce using rule 33 (expression -> INTEGER .)
    EQUALS          reduce using rule 33 (expression -> INTEGER .)
    NE              reduce using rule 33 (expression -> INTEGER .)
    import          reduce using rule 33 (expression -> INTEGER .)
    outcsv          reduce using rule 33 (expression -> INTEGER .)
    save            reduce using rule 33 (expression -> INTEGER .)
    print           reduce using rule 33 (expression -> INTEGER .)
    search          reduce using rule 33 (expression -> INTEGER .)
    foreach         reduce using rule 33 (expression -> INTEGER .)
    end             reduce using rule 33 (expression -> INTEGER .)
    return          reduce using rule 33 (expression -> INTEGER .)
    continue        reduce using rule 33 (expression -> INTEGER .)
    if              reduce using rule 33 (expression -> INTEGER .)
    else            reduce using rule 33 (expression -> INTEGER .)
    def             reduce using rule 33 (expression -> INTEGER .)
    connect         reduce using rule 33 (expression -> INTEGER .)
    let             reduce using rule 33 (expression -> INTEGER .)
    list            reduce using rule 33 (expression -> INTEGER .)
    ID              reduce using rule 33 (expression -> INTEGER .)
    $end            reduce using rule 33 (expression -> INTEGER .)


state 26

    (32) expression -> function .

    PLUS            reduce using rule 32 (expression -> function .)
    MINUS           reduce using rule 32 (expression -> function .)
    MULTIPLY        reduce using rule 32 (expression -> function .)
    DIVIDE          reduce using rule 32 (expression -> function .)
    POWER           reduce using rule 32 (expression -> function .)
    then            reduce using rule 32 (expression -> function .)
    RPAREN          reduce using rule 32 (expression -> function .)
    COMMA           reduce using rule 32 (expression -> function .)
    LT              reduce using rule 32 (expression -> function .)
    LE              reduce using rule 32 (expression -> function .)
    GT              reduce using rule 32 (expression -> function .)
    GE              reduce using rule 32 (expression -> function .)
    EQUALS          reduce using rule 32 (expression -> function .)
    NE              reduce using rule 32 (expression -> function .)
    import          reduce using rule 32 (expression -> function .)
    outcsv          reduce using rule 32 (expression -> function .)
    save            reduce using rule 32 (expression -> function .)
    print           reduce using rule 32 (expression -> function .)
    search          reduce using rule 32 (expression -> function .)
    foreach         reduce using rule 32 (expression -> function .)
    end             reduce using rule 32 (expression -> function .)
    return          reduce using rule 32 (expression -> function .)
    continue        reduce using rule 32 (expression -> function .)
    if              reduce using rule 32 (expression -> function .)
    else            reduce using rule 32 (expression -> function .)
    def             reduce using rule 32 (expression -> function .)
    connect         reduce using rule 32 (expression -> function .)
    let             reduce using rule 32 (expression -> function .)
    list            reduce using rule 32 (expression -> function .)
    ID              reduce using rule 32 (expression -> function .)
    $end            reduce using rule 32 (expression -> function .)


state 27

    (19) command -> if relexpression . then

    then            shift and go to state 54


state 28

    (37) expression -> LPAREN . expression RPAREN
    (31) expression -> . variable
    (32) expression -> . function
    (33) expression -> . INTEGER
    (34) expression -> . FLOAT
    (35) expression -> . STRING
    (36) expression -> . MINUS expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MULTIPLY expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression POWER expression
    (50) variable -> . ID
    (51) variable -> . DBID
    (49) function -> . ID LPAREN parlist RPAREN

    INTEGER         shift and go to state 25
    FLOAT           shift and go to state 31
    STRING          shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 28
    ID              shift and go to state 30
    DBID            shift and go to state 24

    variable                       shift and go to state 29
    function                       shift and go to state 26
    expression                     shift and go to state 55

state 29

    (31) expression -> variable .

    PLUS            reduce using rule 31 (expression -> variable .)
    MINUS           reduce using rule 31 (expression -> variable .)
    MULTIPLY        reduce using rule 31 (expression -> variable .)
    DIVIDE          reduce using rule 31 (expression -> variable .)
    POWER           reduce using rule 31 (expression -> variable .)
    then            reduce using rule 31 (expression -> variable .)
    RPAREN          reduce using rule 31 (expression -> variable .)
    COMMA           reduce using rule 31 (expression -> variable .)
    LT              reduce using rule 31 (expression -> variable .)
    LE              reduce using rule 31 (expression -> variable .)
    GT              reduce using rule 31 (expression -> variable .)
    GE              reduce using rule 31 (expression -> variable .)
    EQUALS          reduce using rule 31 (expression -> variable .)
    NE              reduce using rule 31 (expression -> variable .)
    import          reduce using rule 31 (expression -> variable .)
    outcsv          reduce using rule 31 (expression -> variable .)
    save            reduce using rule 31 (expression -> variable .)
    print           reduce using rule 31 (expression -> variable .)
    search          reduce using rule 31 (expression -> variable .)
    foreach         reduce using rule 31 (expression -> variable .)
    end             reduce using rule 31 (expression -> variable .)
    return          reduce using rule 31 (expression -> variable .)
    continue        reduce using rule 31 (expression -> variable .)
    if              reduce using rule 31 (expression -> variable .)
    else            reduce using rule 31 (expression -> variable .)
    def             reduce using rule 31 (expression -> variable .)
    connect         reduce using rule 31 (expression -> variable .)
    let             reduce using rule 31 (expression -> variable .)
    list            reduce using rule 31 (expression -> variable .)
    ID              reduce using rule 31 (expression -> variable .)
    $end            reduce using rule 31 (expression -> variable .)


state 30

    (50) variable -> ID .
    (49) function -> ID . LPAREN parlist RPAREN

    PLUS            reduce using rule 50 (variable -> ID .)
    MINUS           reduce using rule 50 (variable -> ID .)
    MULTIPLY        reduce using rule 50 (variable -> ID .)
    DIVIDE          reduce using rule 50 (variable -> ID .)
    POWER           reduce using rule 50 (variable -> ID .)
    LT              reduce using rule 50 (variable -> ID .)
    LE              reduce using rule 50 (variable -> ID .)
    GT              reduce using rule 50 (variable -> ID .)
    GE              reduce using rule 50 (variable -> ID .)
    EQUALS          reduce using rule 50 (variable -> ID .)
    NE              reduce using rule 50 (variable -> ID .)
    COMMA           reduce using rule 50 (variable -> ID .)
    import          reduce using rule 50 (variable -> ID .)
    outcsv          reduce using rule 50 (variable -> ID .)
    save            reduce using rule 50 (variable -> ID .)
    print           reduce using rule 50 (variable -> ID .)
    search          reduce using rule 50 (variable -> ID .)
    foreach         reduce using rule 50 (variable -> ID .)
    end             reduce using rule 50 (variable -> ID .)
    return          reduce using rule 50 (variable -> ID .)
    continue        reduce using rule 50 (variable -> ID .)
    if              reduce using rule 50 (variable -> ID .)
    else            reduce using rule 50 (variable -> ID .)
    def             reduce using rule 50 (variable -> ID .)
    connect         reduce using rule 50 (variable -> ID .)
    let             reduce using rule 50 (variable -> ID .)
    list            reduce using rule 50 (variable -> ID .)
    ID              reduce using rule 50 (variable -> ID .)
    $end            reduce using rule 50 (variable -> ID .)
    RPAREN          reduce using rule 50 (variable -> ID .)
    then            reduce using rule 50 (variable -> ID .)
    LPAREN          shift and go to state 48


state 31

    (34) expression -> FLOAT .

    PLUS            reduce using rule 34 (expression -> FLOAT .)
    MINUS           reduce using rule 34 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 34 (expression -> FLOAT .)
    DIVIDE          reduce using rule 34 (expression -> FLOAT .)
    POWER           reduce using rule 34 (expression -> FLOAT .)
    then            reduce using rule 34 (expression -> FLOAT .)
    RPAREN          reduce using rule 34 (expression -> FLOAT .)
    COMMA           reduce using rule 34 (expression -> FLOAT .)
    LT              reduce using rule 34 (expression -> FLOAT .)
    LE              reduce using rule 34 (expression -> FLOAT .)
    GT              reduce using rule 34 (expression -> FLOAT .)
    GE              reduce using rule 34 (expression -> FLOAT .)
    EQUALS          reduce using rule 34 (expression -> FLOAT .)
    NE              reduce using rule 34 (expression -> FLOAT .)
    import          reduce using rule 34 (expression -> FLOAT .)
    outcsv          reduce using rule 34 (expression -> FLOAT .)
    save            reduce using rule 34 (expression -> FLOAT .)
    print           reduce using rule 34 (expression -> FLOAT .)
    search          reduce using rule 34 (expression -> FLOAT .)
    foreach         reduce using rule 34 (expression -> FLOAT .)
    end             reduce using rule 34 (expression -> FLOAT .)
    return          reduce using rule 34 (expression -> FLOAT .)
    continue        reduce using rule 34 (expression -> FLOAT .)
    if              reduce using rule 34 (expression -> FLOAT .)
    else            reduce using rule 34 (expression -> FLOAT .)
    def             reduce using rule 34 (expression -> FLOAT .)
    connect         reduce using rule 34 (expression -> FLOAT .)
    let             reduce using rule 34 (expression -> FLOAT .)
    list            reduce using rule 34 (expression -> FLOAT .)
    ID              reduce using rule 34 (expression -> FLOAT .)
    $end            reduce using rule 34 (expression -> FLOAT .)


state 32

    (43) relexpression -> expression . LT expression
    (44) relexpression -> expression . LE expression
    (45) relexpression -> expression . GT expression
    (46) relexpression -> expression . GE expression
    (47) relexpression -> expression . EQUALS expression
    (48) relexpression -> expression . NE expression
    (38) expression -> expression . PLUS expression
    (39) expression -> expression . MINUS expression
    (40) expression -> expression . MULTIPLY expression
    (41) expression -> expression . DIVIDE expression
    (42) expression -> expression . POWER expression

    LT              shift and go to state 62
    LE              shift and go to state 56
    GT              shift and go to state 63
    GE              shift and go to state 57
    EQUALS          shift and go to state 60
    NE              shift and go to state 61
    PLUS            shift and go to state 64
    MINUS           shift and go to state 66
    MULTIPLY        shift and go to state 65
    DIVIDE          shift and go to state 58
    POWER           shift and go to state 59


state 33

    (7) command -> outcsv ID . in STRING

    in              shift and go to state 67


state 34
